--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page</title>
+    <title>Basketball Shotchart</title>
+    <link rel="shortcut icon" type="image/jpg" href="images/basketball.jpg"/>
 </head>
 <body>
     <div class="outer-court"></div>
